Completed SaveToTXT action

--- a/Structured Cabling Studio/Resources/Controllers/Calculation.en.resx
+++ b/Structured Cabling Studio/Resources/Controllers/Calculation.en.resx
@@ -117,18 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add cable selection recommendations" xml:space="preserve">
-    <value>Add cable selection recommendations</value>
-  </data>
-  <data name="Advanced calculation parameters" xml:space="preserve">
-    <value>Advanced calculation parameters</value>
-  </data>
-  <data name="Arbitary ports count per workplace" xml:space="preserve">
-    <value>Allow an arbitrary ports count per 1 workplace</value>
-  </data>
-  <data name="Availability of technological reserve coefficient:" xml:space="preserve">
-    <value>Take into account of the technological reserve coefficient:</value>
-  </data>
   <data name="AveragePermanentLink" xml:space="preserve">
     <value>Average length of the permanent link:</value>
   </data>
@@ -141,17 +129,8 @@
   <data name="CableSelectionRecommendations" xml:space="preserve">
     <value>Cable selection recommendations:</value>
   </data>
-  <data name="Calculate" xml:space="preserve">
-    <value>Calculate</value>
-  </data>
-  <data name="Clean output block" xml:space="preserve">
-    <value>Clean output block</value>
-  </data>
-  <data name="Consider standard fire safety requirements" xml:space="preserve">
-    <value>Consider the standard fire safety requirements</value>
-  </data>
-  <data name="Hank length" xml:space="preserve">
-    <value>Length</value>
+  <data name="CreatedIn" xml:space="preserve">
+    <value>The structured cabling configuration was created in the Structured Cabling Studio</value>
   </data>
   <data name="HankQuantity" xml:space="preserve">
     <value>Necessary cable hank count:</value>
@@ -165,14 +144,8 @@
   <data name="m" xml:space="preserve">
     <value>m</value>
   </data>
-  <data name="Maximum length of the permanent link:" xml:space="preserve">
-    <value>Maximum length of the permanent link:</value>
-  </data>
   <data name="MaxPermanentLink" xml:space="preserve">
     <value>Maximum length of the permanent link:</value>
-  </data>
-  <data name="Minimum length of the permanent link:" xml:space="preserve">
-    <value>Minimum length of the permanent link:</value>
   </data>
   <data name="MinPermanentLink" xml:space="preserve">
     <value>Minimum length of the permanent link:</value>
@@ -183,17 +156,8 @@
   <data name="NumberOfWorkplaces" xml:space="preserve">
     <value>Workplaces count:</value>
   </data>
-  <data name="Ports count per 1 workplace:" xml:space="preserve">
-    <value>Ports count per 1 workplace:</value>
-  </data>
   <data name="RecordTime" xml:space="preserve">
     <value>Date and time of structured cabling confiruration record:</value>
-  </data>
-  <data name="Restore defaults" xml:space="preserve">
-    <value>Restore defaults</value>
-  </data>
-  <data name="Save to TXT" xml:space="preserve">
-    <value>Save to TXT</value>
   </data>
   <data name="Shielding" xml:space="preserve">
     <value>Recommended cable shielding type:</value>
@@ -201,31 +165,10 @@
   <data name="Standart" xml:space="preserve">
     <value>Recommended cable category:</value>
   </data>
-  <data name="Standart values" xml:space="preserve">
-    <value>Standart values</value>
-  </data>
-  <data name="Strict compliance with the standart" xml:space="preserve">
-    <value>Strict compliance with the ISO/IEC 11801 standart</value>
-  </data>
-  <data name="Take into account the cable hank meterage" xml:space="preserve">
-    <value>Take into account the cable hank meterage</value>
-  </data>
-  <data name="Take into account the necessity of cable shielding" xml:space="preserve">
-    <value>Take into account the necessity of cable shielding</value>
-  </data>
-  <data name="The standard values of a cable hank length" xml:space="preserve">
-    <value>The standard values of a cable hank length</value>
+  <data name="StructuredCablingConfiguration" xml:space="preserve">
+    <value>Structured Cabling Configuration</value>
   </data>
   <data name="TotalCableQuantity" xml:space="preserve">
     <value>Total necessary cable meterage:</value>
-  </data>
-  <data name="Used connection interfaces" xml:space="preserve">
-    <value>Used connection interfaces</value>
-  </data>
-  <data name="Will the sections of the cable route run outdoors" xml:space="preserve">
-    <value>Will the sections of the cable route run outdoors</value>
-  </data>
-  <data name="Workplaces count:" xml:space="preserve">
-    <value>Workplaces count:</value>
   </data>
 </root>
