--- a/Structured Cabling Studio/Resources/Views/Calculation/_ConfigurationsListPartial.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/_ConfigurationsListPartial.en.resx
@@ -117,28 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CableQuantity" xml:space="preserve">
+    <value>Necessary cable meterage:</value>
+  </data>
   <data name="Delete" xml:space="preserve">
-    <value>Удалить</value>
+    <value>Delete</value>
   </data>
   <data name="Delete all" xml:space="preserve">
-    <value>Удалить всё</value>
+    <value>Delete all</value>
   </data>
   <data name="HankQuantity" xml:space="preserve">
-    <value>Необходимое количество бухт кабеля:</value>
+    <value>Necessary cable hank count:</value>
+  </data>
+  <data name="m" xml:space="preserve">
+    <value>m</value>
   </data>
   <data name="MaxPermanentLink" xml:space="preserve">
-    <value>Наибольшая длина постоянного линка (Permanent Link):</value>
+    <value>Maximum length of the permanent link:</value>
   </data>
   <data name="MinPermanentLink" xml:space="preserve">
-    <value>Наименьшая длина постоянного линка (Permanent Link):</value>
+    <value>Minimum length of the permanent link:</value>
   </data>
   <data name="Save to TXT" xml:space="preserve">
-    <value>Сохранить в TXT</value>
-  </data>
-  <data name="TotalCableQuantity" xml:space="preserve">
-    <value>Итоговое необходимое количество кабеля:</value>
+    <value>Save to TXT</value>
   </data>
   <data name="Welcome," xml:space="preserve">
-    <value>Добро пожаловать,</value>
+    <value>Welcome,</value>
   </data>
 </root>
