--- a/Structured Cabling Studio/Resources/Views/Calculation/History.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/History.ru.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CableQuantity" xml:space="preserve">
+    <value>Необходимое количество кабеля:</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Удалить</value>
   </data>
@@ -126,6 +129,9 @@
   <data name="HankQuantity" xml:space="preserve">
     <value>Необходимое количество бухт кабеля:</value>
   </data>
+  <data name="m" xml:space="preserve">
+    <value>м.</value>
+  </data>
   <data name="MaxPermanentLink" xml:space="preserve">
     <value>Наибольшая длина постоянного линка (Permanent Link):</value>
   </data>
@@ -134,9 +140,6 @@
   </data>
   <data name="Save to TXT" xml:space="preserve">
     <value>Сохранить в TXT</value>
-  </data>
-  <data name="TotalCableQuantity" xml:space="preserve">
-    <value>Итоговое необходимое количество кабеля:</value>
   </data>
   <data name="Welcome," xml:space="preserve">
     <value>Добро пожаловать,</value>
