--- a/Structured Cabling Studio/Resources/Views/Calculation/History.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/History.uk.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CableQuantity" xml:space="preserve">
+    <value>Необхідна кількість кабелю:</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Видалити</value>
   </data>
@@ -126,6 +129,9 @@
   <data name="HankQuantity" xml:space="preserve">
     <value>Небхідна кількість бухт кабелю:</value>
   </data>
+  <data name="m" xml:space="preserve">
+    <value>м.</value>
+  </data>
   <data name="MaxPermanentLink" xml:space="preserve">
     <value>Максимальна довжина постійного лінку (Permanent Link):</value>
   </data>
@@ -134,9 +140,6 @@
   </data>
   <data name="Save to TXT" xml:space="preserve">
     <value>Зберегти у TXT</value>
-  </data>
-  <data name="TotalCableQuantity" xml:space="preserve">
-    <value>Загальна необхідна кількість кабелю:</value>
   </data>
   <data name="Welcome," xml:space="preserve">
     <value>Вітаємо,</value>
