Work on the calculate page is ongoing

--- a/Structured Cabling Studio/Resources/Views/Configurations/_DeleteConfigurationPartial.en.resx
+++ b/Structured Cabling Studio/Resources/Views/Configurations/_DeleteConfigurationPartial.en.resx
@@ -121,9 +121,9 @@
     <value>Are you sure you want to delete the cabling confugiration?</value>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>Отмена</value>
+    <value>Cancel</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Удалить</value>
+    <value>Delete</value>
   </data>
 </root>
