--- a/Structured Cabling Studio/Resources/Views/Calculation/Information.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Information.ru.resx
@@ -117,10 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="First formula description" xml:space="preserve">
+    <value>Где a - минимальная длина постоянного линка;&lt;br/&gt;
+b - максимальная длина постоянного линка;&lt;br/&gt;
+c - коэффициент технологического запаса;&lt;br/&gt;
+d - количество рабочих мест;&lt;br/&gt;
+e - количество портов на одно рабочее место.</value>
+  </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>Приложение Structured Cabling Studio предназначено для подсчёта необходимого метража инсталляционного кабеля для построения структурированной кабельной системы (СКС) с учётом требований международного стандарта ISO/IEC 11801. На выбор даётся возможность рассчитать необходимый метраж кабеля как с учётом метража кабеля в 1-й кабельной катушке (бухте), так и без. При расчёте необходимого метража кабеля с учётом метража кабеля в 1-й бухте, расчёт итогового необходимого количества кабеля происходит с учётом количества кабельных пробросов, которые можно сделать с 1-й бухты.</value>
+    <value>Приложение Structured Cabling Studio предназначено для подсчёта необходимого метража инсталляционного кабеля для построения структурированной кабельной системы (СКС) с учётом требований международного стандарта ISO/IEC 11801. На выбор даётся возможность рассчитать необходимый метраж кабеля как с учётом метража кабеля в 1-й кабельной катушке (бухте), так и без. При расчёте необходимого метража кабеля с учётом метража кабеля в 1-й бухте, расчёт итогового необходимого количества кабеля происходит с учётом количества кабельных пробросов, которые можно сделать с 1-й бухты.&lt;br/&gt;Расчет необходимого метража кабеля без учёта бухт производится по формуле:</value>
+  </data>
+  <data name="Fourth paragraph" xml:space="preserve">
+    <value>Для дополнительной информации о проекте обратитесь в раздел</value>
+  </data>
+  <data name="Project information link" xml:space="preserve">
+    <value>Информация о проекте</value>
+  </data>
+  <data name="Second formula description" xml:space="preserve">
+    <value>Где a - количество рабочих мест;&lt;br/&gt;
+b - количество портов на одно рабочее место;&lt;br/&gt;
+c - указанный метраж одной бухты;&lt;br/&gt;
+d - минимальная длина постоянного линка;&lt;br/&gt;
+e - максимальная длина постоянного линка;&lt;br/&gt;
+f - коэффициент технологического запаса.</value>
   </data>
   <data name="Second paragraph" xml:space="preserve">
-    <value>Расчет необходимого метража кабеля без учёта бухт производится по формуле:</value>
+    <value>Расчет необходимого количества кабельных катушек (бухт), производится по формуле:</value>
+  </data>
+  <data name="Third paragraph" xml:space="preserve">
+    <value>Расчет необходимого метража кабеля с учетом бухт, производится, соответственно, получением произведения метража кабеля в 1-й бухте и количества бухт.&lt;br/&gt;
+Приложение предназначено для подсчёта метража необходимого кабеля при проектировании СКС, но может использоваться при проектировании кабельных систем иного характера, к примеру систем электрических кабелей.&lt;br/&gt;
+Вы также можете получить рекомендации по подбору телекоммуникационных кабелей в соответствии с характеристиками планируемой архитектуры СКС. Для этого отметьте на странице расчёта все необходимые параметры получения рекомендаций, соответствующие характеристикам планируемой кабельной системы.</value>
   </data>
 </root>
