Work on the Information page is ongoing

--- a/Structured Cabling Studio/Resources/Views/Calculation/Information.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Information.uk.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="First formula description" xml:space="preserve">
+    <value>Де a - мінімальна довжина постійного лінкy;&lt;br/&gt;
+b - максимальна довжина постійного лінкy;&lt;br/&gt;
+c - коефіцієнт технологічного резерву;&lt;br/&gt;
+d - кількість робочих місць;&lt;br/&gt;
+e - кількість портів на одне ребоче місце.</value>
+  </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>Застосунок Structured Cabling Studio призначений для розрахунку необхіжного метражу інсталляційного кабелю для побудови структурованної кабельної системи (СКС) з урахуванням вимог міжнародного стандарту ISO/IEC 11801. На вибір дається можливість розрахувати необхідний метраж кабелю як з урахуванням метражу кабеля в 1-й кабельній катушці (бухті), так і без.</value>
+    <value>Застосунок Structured Cabling Studio призначений для розрахунку необхідного метража інсталляційного кабеля для побудови структурованної кабельної системи (СКС) з урахуванням вимог міжнародного стандарту ISO/IEC 11801. На вибір дається можливість розрахувати необхідний метраж кабеля як з урахуванням метражу кабеля в 1-й кабельній катушці (бухті), так і без. При розрахунку необхідного метражу кабелю з урахуванням метража кабеля в 1-й бухті, розрахунок загальної необхідної кількості кабелю здійснюється з урахуванням кількості кабельних пробросів, які можно зробити з 1-єї бухти.&lt;br/&gt;Розрахунок необхідного метража кабеля без урахування бухт здійснюється за формулою:</value>
+  </data>
+  <data name="Fourth paragraph" xml:space="preserve">
+    <value>Для отримання додаткової інформаціі про прект звернітся у розділ </value>
+  </data>
+  <data name="Project information link" xml:space="preserve">
+    <value>Інформація про проект</value>
+  </data>
+  <data name="Second formula description" xml:space="preserve">
+    <value>Де a - кількість робочих місць;&lt;br/&gt;
+b - кількість портів на одне робоче місце;&lt;br/&gt;
+c - вказаний метраж однієї бухти;&lt;br/&gt;
+d - мінімальна довжина постійного лінкy;&lt;br/&gt;
+e - максимальна довжина постійного лінкy;&lt;br/&gt;
+f - коефіцієнт технологічного резерву.</value>
   </data>
 </root>
