Work on the Information page is ongoing

--- a/Structured Cabling Studio/Resources/Views/Calculation/Information.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Calculation/Information.ru.resx
@@ -125,7 +125,8 @@ d - количество рабочих мест;&lt;br/&gt;
 e - количество портов на одно рабочее место.</value>
   </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>Приложение Structured Cabling Studio предназначено для подсчёта необходимого метража инсталляционного кабеля для построения структурированной кабельной системы (СКС) с учётом требований международного стандарта ISO/IEC 11801. На выбор даётся возможность рассчитать необходимый метраж кабеля как с учётом метража кабеля в 1-й кабельной катушке (бухте), так и без. При расчёте необходимого метража кабеля с учётом метража кабеля в 1-й бухте, расчёт итогового необходимого количества кабеля происходит с учётом количества кабельных пробросов, которые можно сделать с 1-й бухты.&lt;br/&gt;Расчет необходимого метража кабеля без учёта бухт производится по формуле:</value>
+    <value>Приложение Structured Cabling Studio предназначено для подсчёта необходимого метража инсталляционного кабеля для построения структурированной кабельной системы (СКС) с учётом требований международного стандарта ISO/IEC 11801. На выбор даётся возможность рассчитать необходимый метраж кабеля как с учётом метража кабеля в 1-й кабельной катушке (бухте), так и без. При расчёте необходимого метража кабеля с учётом метража кабеля в 1-й бухте, расчёт итогового необходимого количества кабеля происходит с учётом количества кабельных пробросов, которые можно сделать с 1-й бухты.&lt;br/&gt;
+Расчет необходимого метража кабеля без учёта бухт производится по формуле:</value>
   </data>
   <data name="Fourth paragraph" xml:space="preserve">
     <value>Для дополнительной информации о проекте обратитесь в раздел</value>
@@ -142,7 +143,7 @@ e - максимальная длина постоянного линка;&lt;br
 f - коэффициент технологического запаса.</value>
   </data>
   <data name="Second paragraph" xml:space="preserve">
-    <value>Расчет необходимого количества кабельных катушек (бухт), производится по формуле:</value>
+    <value>Расчет необходимого количества кабельных катушек (бухт) производится по формуле:</value>
   </data>
   <data name="Third paragraph" xml:space="preserve">
     <value>Расчет необходимого метража кабеля с учетом бухт, производится, соответственно, получением произведения метража кабеля в 1-й бухте и количества бухт.&lt;br/&gt;
