--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
@@ -146,6 +146,9 @@
   <data name="Img." xml:space="preserve">
     <value>Рис.</value>
   </data>
+  <data name="Ninth paragraph" xml:space="preserve">
+    <value />
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Профиль</value>
   </data>
