--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
@@ -120,6 +120,9 @@
   <data name="Author of project" xml:space="preserve">
     <value>Автор проекту</value>
   </data>
+  <data name="E-Mail" xml:space="preserve">
+    <value>Електронна пошта</value>
+  </data>
   <data name="History of project" xml:space="preserve">
     <value>Історія проекту</value>
   </data>
