--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
@@ -120,6 +120,9 @@
   <data name="Author of project" xml:space="preserve">
     <value>Автор проекта</value>
   </data>
+  <data name="E-Mail" xml:space="preserve">
+    <value>Электронная почта</value>
+  </data>
   <data name="Eight paragraph &amp; link to the SCS-Calc 2.0 repo" xml:space="preserve">
     <value>Релиз приложения SCS-Calc 2.0 состоялся в феврале 2023-го. По совместительству, приложение стало предметом курсовой работы по платформе .NET в Компьтерной Академии ШАГ г. Кривой Рог.&lt;br /&gt;
 Более подбробно ознакомиться с приложением можно на GitHub</value>
@@ -135,7 +138,7 @@
   </data>
   <data name="Fourth paragraph" xml:space="preserve">
     <value>Проект развивался. В августе 2022-го была начата работа над версией 1.1. Одним из основных направлений разработки было создание меню дополнительных параметров, где пользователь мог настроить параметры расчета.&lt;br/&gt;
-При работе над версией 1.1 началась работа над новой архитектурной концепцией проекта. Для возможности переноса приложения на другие платформы разработки, была начата работа над созданием независимой от типа приложения кросплатформенной библиотеки, содержащей модель логики работы приложения. Это сыграло значительную роль в следующих версиях проекта, позволив перенести логическое ядро приложения на другие платформы.</value>
+При работе над версией 1.1 началась работа над новой архитектурной концепцией проекта. Для возможности переноса приложения на другие платформы разработки, была начата работа над созданием независимой от типа приложения кросплатформенной библиотеки, содержащей модель логики работы приложения. Это сыграло значительную роль в следующих версиях проекта, позволив переносить логическое ядро приложения на другие платформы.</value>
   </data>
   <data name="Fourth&amp;fifth image description" xml:space="preserve">
     <value>SCS-Calc 1.1</value>
@@ -146,8 +149,10 @@
   <data name="Img." xml:space="preserve">
     <value>Рис.</value>
   </data>
-  <data name="Ninth paragraph" xml:space="preserve">
-    <value />
+  <data name="Ninth paragraph - link to the Structured Cabling Studio repo" xml:space="preserve">
+    <value>После релиза SCS-Calc 2.0, в качестве концептуального развития проекта, возникла идея реализации веб-приложения. В марте 2023-го, на платформе .NET 7 ASP.NET Core была начата работа над веб-проектом Structured Cabling Studio.&lt;br /&gt;
+Релиз проекта состоялся в апреле 2023-го. Унаследовав концепцию от десктопных версий проекта, Structured Cabling Studio предоставляет широкий функционал расчета необходимого метража кабеля для построения СКС и получения рекоммендаций по подбору кабеля.&lt;br/&gt;
+С кодом проекта Structured Cabling Studio можно ознакомится на GitHub</value>
   </data>
   <data name="Profile" xml:space="preserve">
     <value>Профиль</value>
