Work on the Project Information page is ongoing

--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.ru.resx
@@ -168,8 +168,7 @@
     <value>SCS-Calc 2.0</value>
   </data>
   <data name="Sixth paragraph" xml:space="preserve">
-    <value>Но версия 1.1 так и не была опубликована - работа над версией 1.1 плавно перетекла в работу над версией 2.0.&lt;br /&gt;
-</value>
+    <value>Но версия 1.1 так и не была опубликована - работа над версией 1.1 плавно перетекла в работу над версией 2.0.</value>
   </data>
   <data name="Third image description" xml:space="preserve">
     <value>Приложение SCS-Calc - десктопная версия</value>
