--- a/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
+++ b/Structured Cabling Studio/Resources/Views/Project/ProjectInformation.uk.resx
@@ -131,18 +131,49 @@
     <value>Код додатку SCS-Calc 1.1 доступний на GitHub</value>
   </data>
   <data name="First paragraph" xml:space="preserve">
-    <value>У серпні 2021-го, під час написання курсової роботи з предмету "Структуровані кабельні системи" в Компьютерній Академіі Шаг м. Кривий Ріг, з'явилася необхідність у створенні програмного забеспечення для розрахунку необхідного для побудови СКС метражу кабелю. Була написана перша версія додатку - консольний додаток на язику C++, який отримав назву SCS-Calc.</value>
+    <value>У серпні 2021-го, під час написання курсової роботи з предмету "Структуровані кабельні системи" в Компьютерній Академіі Шаг м. Кривий Ріг, з'явилася необхідність у створенні програмного забеспечення для розрахунку необхідного для побудови СКС метражу кабелю. Була написана перша версія додатку - консольний додаток на мові C++, який отримав назву SCS-Calc.</value>
   </data>
   <data name="First&amp;second image description" xml:space="preserve">
     <value>Перша, консольна версія додатку SCS-Calc</value>
   </data>
   <data name="Fourth paragraph" xml:space="preserve">
-    <value />
+    <value>Проект мав розвиток. У серпні 2022-го була почата праця над версією 1.1. Одним з основних напрямків розробки будо створення меню додаткових параметрів, де користовач мав змогу налашитувати параметри розрахунку.&lt;br/&gt;
+При роботі над версією 1.1 почалася праця над новою архітектурною концепцією проекту. Для можливості переносу додатку на інші платорми розробки, була начата праця над створенням незалежної від типу додатку кросплатформенної бібліотеки, що містить логіку роботи додатку. Це зіграло значну роль у наступних версіях проекту, давши змогу переносити логічне ядро додатку на інші платформи.</value>
+  </data>
+  <data name="Fourth&amp;fifth image description" xml:space="preserve">
+    <value>SCS-Calc 1.1</value>
   </data>
   <data name="History of project" xml:space="preserve">
     <value>Історія проекту</value>
   </data>
+  <data name="Img." xml:space="preserve">
+    <value>Рис.</value>
+  </data>
+  <data name="Ninth paragraph - link to the Structured Cabling Studio repo" xml:space="preserve">
+    <value>Після релізу SCS-Calc 2.0, в якості концептуального розвитку проекту, з'явилася ідея реалізаціі веб-застосунку. У березні 2023-го, на платформі .NET 7 ASP.NET Core, була начата робота над веб-проектом Structured Cabling Studio.&lt;br/&gt;
+Реліз проекту відбувся у квітні 2023-го. Успадкувавши концепцію від десктопних версій проекту, Structured Cabling Studio надає широкий функціонал розрахунку необхідного метражу кабелю для побудови СКС і отримання рекомендацій з підбору кабелю.&lt;br/&gt;
+З кодом проекту Structured Cabling Studio можно ознайомитись на GitHub.</value>
+  </data>
   <data name="Profile" xml:space="preserve">
     <value>Профіль</value>
+  </data>
+  <data name="Second paragraph" xml:space="preserve">
+    <value>Однак вже тоді було розуміння того, що потрібен, в першу чергу, застосунок з графічним інтерфейсом користувача.&lt;br/&gt;
+Що і було зроблено в червні 2022-го - на мові C#, на платформі .NET 6 Windows Forms, була написана перша версія застосуноку с графічним інтерфейсом користувача. Застосунок отримав релізний індекс 1.0.</value>
+  </data>
+  <data name="Seventh paragraph" xml:space="preserve">
+    <value>Застосунок SCS-Calc 2.0 став цілковито новим, сучасним і функціональним застосунком. Застосунок був написаний на більш сучасній платформі розробці - .NET 7 WPF. Значною мірою був допрацьований функціонал додатку, була додана можливість отримання рекомендацій з підбору кабелю. Перехід на нову платформу дав можливість реалізувати цілковито новий, революційний дизайн.</value>
+  </data>
+  <data name="Sixth image description" xml:space="preserve">
+    <value>SCS-Calc 2.0</value>
+  </data>
+  <data name="Sixth paragraph" xml:space="preserve">
+    <value>Но версія 1.1 так і не була опублікована - робота над версією 1.1 плавно перейшла в роботу над версією 2.0.</value>
+  </data>
+  <data name="Third image description" xml:space="preserve">
+    <value>Застосунок SCS-Calc - десктопна версія</value>
+  </data>
+  <data name="Third paragraph - link to the SCS-Calc repo" xml:space="preserve">
+    <value>Більш детально ознайомитись з додатком SCS-Calc можно на GitHub</value>
   </data>
 </root>
